# pypibt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
pypibt/: __init__.py  dist_table.py  mapf_utils.py  pibt.py
tests/: test_dist_table.py  test_mapf_utils.py  test_pibt.py
tests/assets/: 3x2.map  3x2.scen
